--- a/Dataset_Generator.ipynb
+++ b/Dataset_Generator.ipynb
@@ -149,6 +149,7 @@
     }
    ],
    "source": [
+    "## Busca todos los archivos en un directorio y los guarda en un DataFrame\n",
     "files_path = str(sys.path[0]) + '\\Full_MIDI'\n",
     "\n",
     "dict = {}\n",
@@ -167,144 +168,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file</th>\n",
-       "      <th>file_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...</td>\n",
-       "      <td>'Lieder ohne Worte' Book 1 op1 n1.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...</td>\n",
-       "      <td>'Lieder ohne Worte' Book 2 op30 n3.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...</td>\n",
-       "      <td>(2542)Prelude opus.28, No.16 in B flat minor.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...</td>\n",
-       "      <td>-Study No.1 opus.105.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...</td>\n",
-       "      <td>-Study No.2 opus.105.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76980</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zorro2.mid</td>\n",
-       "      <td>zorro2.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76981</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Guitar_midkar.com_MI...</td>\n",
-       "      <td>zuccherina_polka-it_ab.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76982</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zucchero-ali_d_o...</td>\n",
-       "      <td>zucchero-ali_d_oro.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76983</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zucchero-music_i...</td>\n",
-       "      <td>zucchero-music_in_me.mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76984</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzsw.mid</td>\n",
-       "      <td>zzsw.mid</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>76985 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    file  \\\n",
-       "0      C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...   \n",
-       "1      C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...   \n",
-       "2      C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...   \n",
-       "3      C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...   \n",
-       "4      C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical Archives -...   \n",
-       "...                                                  ...   \n",
-       "76980           C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zorro2.mid   \n",
-       "76981  C:\\dh\\FULL_MIDI\\Full_MIDI\\Guitar_midkar.com_MI...   \n",
-       "76982  C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zucchero-ali_d_o...   \n",
-       "76983  C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zucchero-music_i...   \n",
-       "76984             C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzsw.mid   \n",
-       "\n",
-       "                                              file_name  \n",
-       "0                 'Lieder ohne Worte' Book 1 op1 n1.mid  \n",
-       "1                'Lieder ohne Worte' Book 2 op30 n3.mid  \n",
-       "2      (2542)Prelude opus.28, No.16 in B flat minor.mid  \n",
-       "3                              -Study No.1 opus.105.mid  \n",
-       "4                              -Study No.2 opus.105.mid  \n",
-       "...                                                 ...  \n",
-       "76980                                        zorro2.mid  \n",
-       "76981                        zuccherina_polka-it_ab.mid  \n",
-       "76982                            zucchero-ali_d_oro.mid  \n",
-       "76983                          zucchero-music_in_me.mid  \n",
-       "76984                                          zzsw.mid  \n",
-       "\n",
-       "[76985 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files_path = str(sys.path[0]) + '\\Full_MIDI\\\\'\n",
-    "FILE = \"FULL_MIDI_por_proecesar.csv\"\n",
-    "df_files = pd.read_csv(FILE,sep=\",\")\n",
-    "df_files.sort_values('file_name',inplace=True)\n",
-    "df_files.reset_index(inplace=True,drop=True)\n",
-    "df_files['file'] = df_files['full_path'].apply(lambda x: files_path +  x.replace('/','\\\\'))\n",
-    "del df_files['path']\n",
-    "del df_files['full_path']\n",
-    "df_files"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
    "outputs": [
@@ -317,6 +180,7 @@
     }
    ],
    "source": [
+    "## Permite administrar la generacion del dataset paralelizando el proceso, por BATCHES\n",
     "BATCH_SIZE = 4000\n",
     "files_from = 55258\n",
     "files_to = 76985\n",
@@ -394,90 +258,6 @@
     "print('SAVED!!')\n",
     "del df_midi_stats"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12589"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file</th>\n",
-       "      <th>file_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>23999</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical_Guitar_cla...</td>\n",
-       "      <td>Moreno-Torroba_Castles_Spain_Simancas.mid</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    file  \\\n",
-       "23999  C:\\dh\\FULL_MIDI\\Full_MIDI\\Classical_Guitar_cla...   \n",
-       "\n",
-       "                                       file_name  \n",
-       "23999  Moreno-Torroba_Castles_Spain_Simancas.mid  "
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_files[df_files.file_name == 'Moreno-Torroba_Castles_Spain_Simancas.mid']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
