--- a/Dataset_Generator.ipynb
+++ b/Dataset_Generator.ipynb
@@ -8,37 +8,19 @@
    "source": [
     "from mido import MidiFile\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from commons import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Importa la tabla que parsea numeros de notas a nombre y octava\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "from commons import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os, sys\n",
     "from contextlib import suppress\n",
     "import pickle  \n",
-    "with open('dict_columns_total.pkl', 'rb') as df_pkl:\n",
-    "        mask_columns = pickle.load(df_pkl)"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,23 +56,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...</td>\n",
-       "      <td>'74-'75.mid</td>\n",
+       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\Classical...</td>\n",
+       "      <td>'Lieder ohne Worte' Book 2 op30 n3.mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...</td>\n",
-       "      <td>'74-'75.txt</td>\n",
+       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\Pop_and_T...</td>\n",
+       "      <td>(Dj Quicksilver) bellisima.mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...</td>\n",
-       "      <td>'74-'75.txt</td>\n",
+       "      <td>(TEARS).MID</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...</td>\n",
-       "      <td>'74-'75_2.mid</td>\n",
+       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\2009 MIDI...</td>\n",
+       "      <td>(Your Love Keeps Lifting Me) Higher and Higher...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -98,50 +80,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166912</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zz_top-tush.mid</td>\n",
-       "      <td>zz_top-tush.mid</td>\n",
+       "      <th>88230</th>\n",
+       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zyysayr.mid</td>\n",
+       "      <td>zyysayr.mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166913</th>\n",
+       "      <th>88231</th>\n",
+       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zz_top-shes_just...</td>\n",
+       "      <td>zz_top-shes_just_killing_me.mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88232</th>\n",
        "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzdq.MID</td>\n",
        "      <td>zzdq.MID</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166914</th>\n",
+       "      <th>88233</th>\n",
        "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzgsv.mid</td>\n",
        "      <td>zzgsv.mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166915</th>\n",
+       "      <th>88234</th>\n",
        "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzgundam.mid</td>\n",
        "      <td>zzgundam.mid</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166916</th>\n",
-       "      <td>C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzsw.mid</td>\n",
-       "      <td>zzsw.mid</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>166917 rows × 2 columns</p>\n",
+       "<p>88235 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     file        file_name\n",
-       "0       C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...      '74-'75.mid\n",
-       "1       C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...      '74-'75.mid\n",
-       "2       C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...      '74-'75.txt\n",
-       "3       C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...      '74-'75.txt\n",
-       "4       C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...    '74-'75_2.mid\n",
-       "...                                                   ...              ...\n",
-       "166912      C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zz_top-tush.mid  zz_top-tush.mid\n",
-       "166913             C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzdq.MID         zzdq.MID\n",
-       "166914            C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzgsv.mid        zzgsv.mid\n",
-       "166915         C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzgundam.mid     zzgundam.mid\n",
-       "166916             C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzsw.mid         zzsw.mid\n",
+       "                                                    file  \\\n",
+       "0      C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...   \n",
+       "1      C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\Classical...   \n",
+       "2      C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\Pop_and_T...   \n",
+       "3      C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\unclassif...   \n",
+       "4      C:\\dh\\FULL_MIDI\\Full_MIDI\\Categories\\2009 MIDI...   \n",
+       "...                                                  ...   \n",
+       "88230          C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zyysayr.mid   \n",
+       "88231  C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zz_top-shes_just...   \n",
+       "88232             C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzdq.MID   \n",
+       "88233            C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzgsv.mid   \n",
+       "88234         C:\\dh\\FULL_MIDI\\Full_MIDI\\Z\\Z\\zzgundam.mid   \n",
        "\n",
-       "[166917 rows x 2 columns]"
+       "                                               file_name  \n",
+       "0                                            '74-'75.mid  \n",
+       "1                 'Lieder ohne Worte' Book 2 op30 n3.mid  \n",
+       "2                         (Dj Quicksilver) bellisima.mid  \n",
+       "3                                            (TEARS).MID  \n",
+       "4      (Your Love Keeps Lifting Me) Higher and Higher...  \n",
+       "...                                                  ...  \n",
+       "88230                                        zyysayr.mid  \n",
+       "88231                    zz_top-shes_just_killing_me.mid  \n",
+       "88232                                           zzdq.MID  \n",
+       "88233                                          zzgsv.mid  \n",
+       "88234                                       zzgundam.mid  \n",
+       "\n",
+       "[88235 rows x 2 columns]"
       ]
      },
      "metadata": {},
@@ -149,7 +144,6 @@
     }
    ],
    "source": [
-    "## Busca todos los archivos en un directorio y los guarda en un DataFrame\n",
     "files_path = str(sys.path[0]) + '\\Full_MIDI'\n",
     "\n",
     "dict = {}\n",
@@ -168,29 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55258 76985\n"
+      "0 25\n"
      ]
     }
    ],
    "source": [
-    "## Permite administrar la generacion del dataset paralelizando el proceso, por BATCHES\n",
-    "BATCH_SIZE = 4000\n",
-    "files_from = 55258\n",
-    "files_to = 76985\n",
-    "CSV_SAVE = 'midi_stats_vX7'\n",
+    "BATCH_SIZE = 25\n",
+    "files_from = 0\n",
+    "files_to = 25\n",
+    "CSV_SAVE = 'df_scaled'\n",
     "print(files_from,files_to)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,18 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "zuccherina_polka-it_ab.mid G\n",
-      "sec: 139.49999999999923\n",
-      "comp: 139\n",
-      "success 20684 / 76982\n",
-      "batch 5\n"
+      ".Study No.3, Retour du pâtre, opus.109.mid G\n",
+      "sec: 91.04562980078107\n",
+      "comp: 37\n",
+      "success 25 / 25\n",
+      "batch 0\n",
+      "SAVING!!\n",
+      "SAVED!!\n"
      ]
     }
    ],
@@ -221,12 +216,9 @@
     "for index, row in df_files[files_from:files_to].iterrows():\n",
     "    with suppress(Exception):\n",
     "        if ((count_files % BATCH_SIZE == 0) and (count_files > 0)):\n",
-    "            print('SAVING!!')\n",
-    "            df_midi_stats = pd.DataFrame.from_dict(dict, \"index\")   \n",
-    "            keep_columns = (df_midi_stats.isnull().sum() / df_midi_stats.shape[0]) <= 0.98\n",
-    "            #           keep_columns = list(set(mask_columns) & set(df_midi_stats.columns))\n",
-    "            df_midi_stats.loc[:,keep_columns].to_csv(CSV_SAVE + '.csv')\n",
-    "            print('SAVED!!')\n",
+    "            \n",
+    "            SaveAllFiles(dict)\n",
+    "            \n",
     "            del df_midi_stats\n",
     "            count_batch = count_batch + 1\n",
     "\n",
@@ -234,29 +226,9 @@
     "\n",
     "        count_files = count_files + 1\n",
     "        print('success', str(count_files), '/', index + 1)\n",
-    "        print('batch', str(count_batch))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SAVED!!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# keep_columns = list(set(mask_columns) & set(df_midi_stats.columns))\n",
-    "df_midi_stats = pd.DataFrame.from_dict(dict, \"index\")   \n",
-    "keep_columns = (df_midi_stats.isnull().sum() / df_midi_stats.shape[0]) <= 0.98\n",
-    "df_midi_stats.loc[:,keep_columns].to_csv(CSV_SAVE + '.csv')\n",
-    "print('SAVED!!')\n",
-    "del df_midi_stats"
+    "        print('batch', str(count_batch))\n",
+    "\n",
+    "SaveAllFiles(dict, files_path)"
    ]
   }
  ],
