--- a/HOST.ipynb
+++ b/HOST.ipynb
@@ -2,133 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from urllib.parse import unquote\n",
     "import os\n",
     "from contextlib import suppress\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import pickle  \n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "\n",
-    "with open('dist/dict_columns_groups.pkl', 'rb') as pkl:\n",
-    "        dict_columns_groups = pickle.load(pkl)\n",
-    "        \n",
-    "with open('dist/lgbm_clf.pkl', 'rb') as pkl:\n",
-    "        LightGBM = pickle.load(pkl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Nuestra librería de funciones\n",
-    "from commons import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(88359, 509)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_midi = pd.read_csv('data_midi_drop.csv',sep=\",\")\n",
-    "data_midi.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colums_categorized = []\n",
-    "for keys in dict_columns_groups:\n",
-    "    for values in dict_columns_groups[keys]:\n",
-    "        colums_categorized.append(values)\n",
-    "        \n",
-    "colums_categorized\n",
-    "\n",
-    "columns_not_categorized = []\n",
-    "for col in data_midi.columns:\n",
-    "    if col not in colums_categorized:\n",
-    "        columns_not_categorized.append(col)\n",
-    "\n",
-    "columns_not_categorized.remove('tema')\n",
-    "columns_not_categorized.remove('path')\n",
-    "columns_not_categorized.remove('indice')\n",
-    "columns_not_categorized.remove('Cluster')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cosine_similarity_row(X__sc, vec_a,indice):\n",
-    "    vec_b = X__sc\n",
-    "    # TODO: vectorizar el cosine_similarity\n",
-    "    cosine_list =cosine_similarity([vec_a], vec_b).reshape(-1)\n",
-    "    similarity = pd.Series(cosine_list,index=indice).sort_values(ascending=False)\n",
-    "    return similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_midi.set_index(data_midi.indice,inplace=True,drop=False)\n",
-    "data_index = data_midi[['indice', 'Cluster']]\n",
-    "\n",
-    "data_midi.fillna(0, inplace=True)\n",
-    "X=data_midi.drop(['tema','indice','path', 'Cluster'],axis=1)\n",
-    "data_midi.index\n",
-    "\n",
-    "sc = StandardScaler()\n",
-    "sc.fit(X)\n",
-    "X__sc = sc.transform(X)\n",
-    "del data_midi\n",
-    "\n",
-    "df_scaled = pd.DataFrame(X__sc,columns=X.columns)\n",
-    "df_scaled.set_index(data_index['indice'],inplace=True)\n",
-    "df_scaled['Cluster'] = data_index['Cluster']\n",
-    "data_index['indice_lower_search'] = data_index['indice'].apply(lambda x: x.lower().replace('-',' ').replace('_',' '))\n",
-    "data_index['indice_lower'] = data_index['indice'].apply(lambda x: x.lower())\n",
-    "del data_index['Cluster']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Iniciamos nuestra API\n",
+    "import pickle  \n",
     "import requests\n",
     "from flask import  Flask, request, jsonify, render_template, send_file, safe_join, abort\n",
-    "app = Flask('recomendar canciones')"
+    "from commons import *"
    ]
   },
   {
@@ -137,7 +26,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## B\n",
+    "with open('dist/dict_columns_groups.pkl', 'rb') as pkl:\n",
+    "        dict_columns_groups = pickle.load(pkl)\n",
+    "        \n",
+    "with open('dist/columns_not_categorized.pkl', 'rb') as pkl:\n",
+    "        columns_not_categorized = pickle.load(pkl)\n",
+    "        \n",
+    "with open('dist/lgbm_clf.pkl', 'rb') as pkl:\n",
+    "        LightGBM = pickle.load(pkl)\n",
+    "        \n",
+    "with open('dist/sc.pkl', 'rb') as pkl:\n",
+    "        sc = pickle.load(pkl)\n",
+    "\n",
+    "df_scaled = pd.read_csv('df_scaled.csv',sep=\",\",index_col='indice')\n",
+    "data_index = pd.read_csv('data_index.csv',sep=\",\",index_col='indice.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iniciamos nuestra API\n",
+    "app = Flask(__name__)\n",
+    "app.config[\"FILES_PATH\"] = \"Full_MIDI\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@app.route(\"/search_titles\",methods=['GET'])\n",
     "def search_titles(data_index=data_index, sc=sc):   \n",
     "    search=request.args['search']\n",
@@ -160,80 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Devuelve valores la diferencia de cada parametros entre dos temas. Permite interpretar los resultados generados por la funcion get_related_songs()\n",
-    "@app.route(\"/similarity_songs\",methods=['GET'])\n",
-    "def get_simil_songs():   \n",
-    "\n",
-    "    data=df_scaled.copy()\n",
-    "    \n",
-    "    duracion_notas =float(request.args['duracion_notas'])\n",
-    "    amplitud_tonal = float(request.args['amplitud_tonal'])\n",
-    "    ritmica_instrument = float(request.args['ritmica_instrument']) \n",
-    "    ritmica_drums = float(request.args['ritmica_drums'])\n",
-    "    armonia = float(request.args['armonia'])\n",
-    "    dinamica = float(request.args['dinamica'])\n",
-    "    instrumentacion = float(request.args['instrumentacion'])\n",
-    "    tempo = float(request.args['tempo'])\n",
-    "    notas_simultaneas = float(request.args['notas_simultaneas']) \n",
-    "    duracion_tema = float(request.args['duracion_tema']) \n",
-    "    others = float(request.args['others'])\n",
-    "    penalizacion = float(request.args['penalizacion'])\n",
-    "    filtrar=request.args['filtrar']\n",
-    "    \n",
-    "    song1 = request.args['song1']\n",
-    "    song2 = request.args['song2']\n",
-    "    \n",
-    "    mask_category =  np.full((data.shape[0],1), True, dtype=bool)\n",
-    "        \n",
-    "    dict_key_values = {'instrumentacion':instrumentacion,\n",
-    "                     'ritmica_drums':ritmica_drums ,\n",
-    "                     'ritmica_instrument':ritmica_instrument ,\n",
-    "                     'amplitud_tonal':amplitud_tonal ,\n",
-    "                     'dinamica':dinamica, \n",
-    "                     'duracion_notas1':duracion_notas, \n",
-    "                     'duracion_notas2':duracion_notas, \n",
-    "                     'notas_simultaneas':notas_simultaneas ,\n",
-    "                     'tempo':tempo, \n",
-    "                     'duracion_tema':duracion_tema ,\n",
-    "                     'armonia1':armonia, \n",
-    "                     'armonia2':armonia, \n",
-    "                     'armonia3':armonia, \n",
-    "                     'armonia4':armonia, \n",
-    "                     'armonia5':armonia}\n",
-    "    \n",
-    "    # La penalizacion genera un orden de magnitud para la distancia minima a la hora de calcular el cosine_similarity\n",
-    "    # Si la penalización es 1, el min_sim_distance sera de 0.1, si es 2 sera de 0.01\n",
-    "    # Como resultante las columnas penalizades tendrán aún menos relevancia a la hora de rastreas similitudes entre temas \n",
-    "    min_sim_distance = 1 / 10**penalizacion \n",
-    "    \n",
-    "    for keys in dict_key_values.keys():\n",
-    "        cant_keys = len(dict_columns_groups[keys])\n",
-    "        for column in dict_columns_groups[keys]:\n",
-    "            data[column] = (data[column] / np.sqrt(cant_keys)) * (dict_key_values[keys] + min_sim_distance)\n",
-    "\n",
-    "    for column in columns_not_categorized:\n",
-    "        data[column] = (data[column] / np.sqrt(cant_keys) ) * (others + min_sim_distance)\n",
-    "        \n",
-    "    data = data.loc[[song1, song2]]\n",
-    "\n",
-    "    if (filtrar == 'True'):\n",
-    "        df_values = data.sum(axis=0)\n",
-    "        df_values_mask = df_values > 0\n",
-    "        data = data.loc[:,df_values_mask]\n",
-    "        print('columnas sin filtrar:',df_values_mask.count())\n",
-    "              \n",
-    "    df_diff = data.diff().abs().iloc[1].T.sort_values(ascending=False)\n",
-    "    \n",
-    "    return df_diff.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Devuelve un diccionario con los {{cant_resultados}} temas con mayor similitud basada en los parametros recibidos, permite paginado\n",
     "@app.route(\"/related_songs\",methods=['GET'])\n",
     "def get_related_songs(df_scaled=df_scaled, sc=sc):   \n",
     "    data=df_scaled.copy()\n",
@@ -300,8 +147,7 @@
     "                     'armonia1':armonia, \n",
     "                     'armonia2':armonia, \n",
     "                     'armonia3':armonia, \n",
-    "                     'armonia4':armonia, \n",
-    "                     'armonia5':armonia}\n",
+    "                     'armonia4':armonia}\n",
     "\n",
     "    min_sim_distance = 1 / 10**penalizacion \n",
     "    \n",
@@ -341,8 +187,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Permite solicitar un archivo MIDI a partir de su ruta relativa\n",
-    "app.config[\"FILES_PATH\"] = \"Full_MIDI\"\n",
     "@app.route(\"/get-file/<path:filename>\")\n",
     "def get_file(filename):\n",
     "    safe_path = safe_join(app.config[\"FILES_PATH\"], filename)\n",
@@ -352,16 +196,10 @@
     "        response.headers.add(\"Access-Control-Allow-Origin\", \"*\")\n",
     "        return response\n",
     "    except FileNotFoundError:\n",
-    "        abort(404)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app.run(host='0.0.0.0')"
+    "        abort(404)\n",
+    "\n",
+    "if __name__ == '__main__':  \n",
+    "    app.run(host='0.0.0.0', debug=True)       "
    ]
   }
  ],
