--- a/Dataset_Generator.ipynb
+++ b/Dataset_Generator.ipynb
@@ -217,7 +217,7 @@
     "    with suppress(Exception):\n",
     "        if ((count_files % BATCH_SIZE == 0) and (count_files > 0)):\n",
     "            \n",
-    "            SaveAllFiles(dict)\n",
+    "            SaveAllFiles(dict, files_path)\n",
     "            \n",
     "            del df_midi_stats\n",
     "            count_batch = count_batch + 1\n",
